renamed files, made reloading page work, index page not scrolling

--- a/index.html
+++ b/index.html
@@ -15,6 +15,36 @@
         .popup button { background: #000; color: #fff; border: none; padding: 10px 20px; width: 100%; border-radius: 4px; cursor: pointer; margin-top: 20px; }
         .popup button:hover { background: #333; }
     </style>
+    <style>
+
+        main, header {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+
+        header {
+            font-size: 40px;    
+            border-bottom: 1px gray solid;
+        }
+        div {
+            width: 400px;
+            align-self: center;
+        }
+
+        p {
+            align-self: center;
+            text-indent: 40px;
+            font-size: 20px;
+        }
+
+        .title {
+            font-weight: bold;
+            font-style: italic;
+            font-size:  24px;
+            text-indent: 0px;
+        }
+    </style>
 </head>
 <body>
     <button class="bouncing-button" onclick="alert('Next page!')">Onward!</button>
@@ -54,5 +84,38 @@
             popup.style.display = 'none';
         }
     </script>
+    <header>
+        <b>The Limes</b>
+    </header>
+    <main>
+        <div>
+            <p class="title">The Rise of Remote Work and Its Impact on Work-Life Balance</p>
+            <p>
+            Over the past few years, remote work has evolved from a niche option to a
+            mainstream reality for millions of employees around the world.   
+            </p> 
+            <p>
+            What was once seen as a perk or temporary measure during the 
+            pandemic has now become a long-term fixture for
+            many businesses and workers alike.
+            With the convenience of working from home, 
+            employees have gained a new sense of freedom, 
+            but this shift has also come with challenges. 
+            The balance between work and life has been altered,
+            often blurring the lines between professional responsibilities and personal time.
+            </p>
+            <p>
+                The rapid rise of electric vehicles can be attributed to several key technological advancements. 
+                The most notable of these is the development of more efficient and affordable battery technology. 
+                Lithium-ion batteries, which power most modern EVs, have seen significant improvements in energy density, charging speed, and cost over the past decade. 
+                These advancements have made EVs more affordable, with longer driving ranges and faster charging times, making them a more practical option for everyday consumers.
+            </p>
+            <p>
+                The trend of remote work has been growing steadily for years. Advances in technology, such as cloud computing, video conferencing, and collaboration tools, have made it easier for teams to stay connected and productive from virtually anywhere. In fact, according to a report by Gallup, the percentage of U.S. employees working remotely at least part-time has increased by 87% since the early 2000s.
+
+However, the COVID-19 pandemic accelerated this shift in unprecedented ways. As businesses scrambled to adjust to lockdowns and social distancing measures, remote work became a necessity for survival. This rapid adoption forced both companies and employees to adapt quickly, and many discovered that working from home could be just as productive — or even more so — than working in an office.
+            </p>
+        </div>
+    </main>
 </body>
 </html>
