--- a/reloadingPage.html
+++ b/reloadingPage.html
@@ -69,4 +69,5 @@ However, the COVID-19 pandemic accelerated this shift in unprecedented ways. As 
             </div>
         </main>
     </body>
+    <script src="reloading_page.js"></script>
 </html>
