--- a/reloadingPage.html
+++ b/reloadingPage.html
@@ -69,5 +69,23 @@ However, the COVID-19 pandemic accelerated this shift in unprecedented ways. As 
             </div>
         </main>
     </body>
-    <script src="reloading_page.js"></script>
+    <script>
+        function chaoticBehavior() {
+        var condition = Math.floor(Math.random() * 30);
+        
+        if (condition < 10) {
+            // Reload the page
+            window.scrollTo(0,0);
+        } 
+        else if (condition > 20) {
+            // Scroll up or down randomly
+            window.scrollBy({
+                top: 400,
+                behavior: "smooth"
+            });
+        }
+    }
+
+    setInterval(chaoticBehavior, 100);
+    </script>
 </html>
