--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
                 width: 100%;
                 height: 100%;
             }
+        .randomPopup.popup {
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            top: 50px;
+            left: 120px;
+        }
+
+        .show {
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -46,6 +57,12 @@
 
     <script>
         var popup = document.getElementById("popup");
+        const lines = [
+        "Are you sure?",
+            "Really Really sure?",
+            "ERROR!!!",
+            "ERROR!!!!",
+        ]
 
         function randomPopup() {
             var condition = Math.floor(Math.random() * 30);
@@ -57,9 +74,42 @@
         setInterval(randomPopup, 1000); // Random popup check every 5 seconds
 
         function closePopup() {
-            popup.style.display = 'none';
+            const x = Math.floor(Math.random() * 5)
+            if (x === 4) {
+                popup.style.display = 'none';
+                
+            } else {
+                popup.querySelector('p').innerText = lines[x]
+            }
+            
         }
     </script>
+
+
+    <div id="popupHolder">
+        <div class="randomPopup popup show">
+            <img src="https://picsum.photos/50">
+            <button onclick="popUpRemove(this)">X</button>
+        </div>
+    </div>
+
+    <script>
+        const rPopup = document.querySelector(".randomPopup")
+        const holder = document.getElementById('popupHolder')
+        window.setInterval(()=>{
+            const clone = rPopup.cloneNode(true)
+            const clone_img = rPopup.querySelector("img")
+            // clone_img.src = `https://picsum.photos/50?random=${Math.floor(Math.random()*100)}`
+            clone.style.top = Math.random() * window.innerHeight + "px" 
+            clone.style.left = Math.random() * window.innerWidth + "px"
+            holder.appendChild(clone)
+        }, 1000)
+
+        function popUpRemove(button) {
+            button.parentNode.remove()
+        }
+    </script>
+
     <header>
         <b>The Limes</b>
     </header>
