added click me button and link back to index + lime logo

--- a/popupPage.html
+++ b/popupPage.html
@@ -39,7 +39,9 @@
 </head>
 <body>
     <iframe src="basic.html"></iframe>
-    <button class="bouncing-button" onclick="alert('Next page!')">Onward!</button>
+    <a href="index.html">
+        <button class="bouncing-button" onclick="alert('Back to Home!')">Onward!</button>
+    </a>
 
     <script>
         const button = document.querySelector('.bouncing-button');
