--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Useless Hub</title>
   <style>
     body {
-      background-color: #f8f8f8;
+      background-color: #fff;
       margin: 0;
       padding: 20px;
       text-align: center;
@@ -44,7 +44,7 @@
       width:325px;
       border: solid;
       border-width: 2px;
-      border-color: aquamarine;
+      border-color: rgb(0, 255, 38);
       text-align: center;
       margin: 10px;
       display: flex;
@@ -53,7 +53,6 @@
     }
     .galleryimg {
       max-width: max-content;
-      height: 500px;
     }
   
   </style>
