--- a/404Page.html
+++ b/404Page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/x-icon" href="./images/theLimes.png">
   <meta charset="UTF-8">
   <title>404 Not Found</title>
   <style>
