Turned terms to html to open to new tab on popup

--- a/awesome_popup_terms/privacy_policy.html
+++ b/awesome_popup_terms/privacy_policy.html
@@ -1,4 +1,16 @@
-At The New York Times Company, our mission is to seek the truth and help people understand the world. We want you to understand how we handle your personal information. We also want you to know your rights and choices.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <img src="theLimes.png" alt="limes"></img>
+    <img src="theLimes.png" alt="limes"></img>
+    <img src="theLimes.png" alt="limes"></img>
+    <img src="theLimes.png" alt="limes"></img>
+    At The New York Times Company, our mission is to seek the truth and help people understand the world. We want you to understand how we handle your personal information. We also want you to know your rights and choices.
 
 This policy describes how we handle your personal information when you use the following “Times Services”:
 
@@ -682,5 +694,5 @@ Wirecutter operates the Wirecutter Services in accordance with the practices dis
 The Athletic also operates as an independent controller of personal information collected through The Athletic site available at nytimes.com/athletic and The Athletic mobile app, The Athletic’s pages or ads on social media networks, email messages sent by The Athletic and any other services offered by The Athletic (“The Athletic Services”). If you have any questions regarding The Athletic, please contact The Athletic at privacy@theathletic.com.
 
 The Athletic operates The Athletic Services in accordance with the practices disclosed in this Privacy Policy. With respect to The Athletic Services, The Athletic Media Company and its subsidiaries are referred to in this Privacy Policy as included in “The Times,” “we” or “our.” In this Privacy Policy, The Athletic Services are included under “Times Services.”
-
-Back to top
+</body>
+</html>
