--- a/awesome_popup_terms/terms_of_service.html
+++ b/awesome_popup_terms/terms_of_service.html
@@ -1,4 +1,13 @@
-PLEASE READ THESE TERMS CAREFULLY BEFORE USING ANY NYT PRODUCTS OR SERVICES, AS THESE TERMS AFFECT YOUR LEGAL RIGHTS.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <img src="theLimes.png" alt="Limes"></img>
+    PLEASE READ THESE TERMS CAREFULLY BEFORE USING ANY NYT PRODUCTS OR SERVICES, AS THESE TERMS AFFECT YOUR LEGAL RIGHTS.
 
 IMPORTANT NOTICE - ARBITRATION AGREEMENT AND CLASS ACTION WAIVER: BY AGREEING TO BE BOUND BY THE TERMS OF SERVICE, YOU AGREE THAT ALL DISPUTES BETWEEN US WILL BE RESOLVED BY BINDING ARBITRATION, EXCEPT FOR CERTAIN LIMITED TYPES OF DISPUTES DESCRIBED IN SECTION 12 BELOW. YOUR AGREEMENT TO ARBITRATION MEANS YOU ARE GIVING UP THE RIGHT TO GO TO COURT AND THE RIGHT TO A TRIAL BY JURY, AND INSTEAD, DISPUTES WILL BE DECIDED BY A NEUTRAL ARBITRATOR. YOU ALSO AGREE THAT ALL DISPUTES BETWEEN US, WHETHER IN COURT OR IN ARBITRATION, WILL BE BROUGHT ONLY ON AN INDIVIDUAL BASIS AND YOU ARE WAIVING YOUR RIGHT TO BRING OR PARTICIPATE IN A CLASS ARBITRATION OR CLASS ACTION. PLEASE CLICK HERE TO READ SECTION 12 OF THIS AGREEMENT FOR FURTHER DETAILS.
 
@@ -256,3 +265,5 @@ Both you and NYT acknowledge and agree that Apple and Apple’s subsidiaries are
 You are allowed unlimited reinstalls of the Application without any additional fee, provided that if the Application is removed from Google Play due to (a) an allegation of infringement, or actual infringement, of any third-party Intellectual Property Right; (b) an allegation of, or actual violation of, third-party rights; or (c) an allegation or determination that such Product does not comply with applicable law, then the Application will be removed from all portions of Google Play and you will no longer have a right or ability to reinstall the Application.
 You may also be able to claim a refund from Google for purchases made in the Application if you qualify under the Google Play refund policy.
 Google grants to the User a nonexclusive, worldwide, and perpetual license to perform, display, and use the Application. The “User” means you and may also include, but is not limited to, a family group and family members whose accounts are joined together for the purpose of creating a family group. Family groups on Google Play will be subject to reasonable limits designed to prevent abuse of family sharing features.
+</body>
+</html>
