--- a/popupPage.html
+++ b/popupPage.html
@@ -58,7 +58,7 @@
 
     <div class="popup" id="popup">
         <h2>We've updated our terms</h2>
-        <p>We encourage you to review our updated <a href="awesome_popup_terms/terms_of_sale" target="_blank">Terms of Sale</a>, <a href="awesome_popup_terms/terms_of_service" target="_blank">Terms of Service</a>, and <a href="awesome_popup_terms/privacy_policy" target="_blank">Privacy Policy</a>. By continuing, you agree to the updated Terms listed here.</p>
+        <p>We encourage you to review our updated <a href="awesome_popup_terms/terms_of_sale.html" target="_blank">Terms of Sale</a>, <a href="awesome_popup_terms/terms_of_service.html" target="_blank">Terms of Service</a>, and <a href="awesome_popup_terms/privacy_policy.html" target="_blank">Privacy Policy</a>. By continuing, you agree to the updated Terms listed here.</p>
         <button onclick="closePopup()">Continue</button>
     </div>
 
