--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
 <br>
 <hr>
-<p>The Next generation of New Yark Times, now it's the Limes Times, with great human interaction and interesting articles. find something fun with The Limes, don't crash out!!!</p>
+<p>The Next generation of the News, the New News if you will... we're the Lime Times, with great human interaction and interesting articles. Now with an updated website!</p>
   </nav>
 </body>
 </html>
