--- a/commandLinePage.html
+++ b/commandLinePage.html
@@ -82,7 +82,7 @@
           }
         }
       },
-      "The Limes": {
+      "The_Limes": {
         "piece4": "E",
         "config": {
           "settings.conf": "Config: The settings are purposely confusing."
