--- a/reloadingPage.html
+++ b/reloadingPage.html
@@ -40,8 +40,7 @@
             }
 
             .fakeload {
-                opacity:0.8;
-                background-color:#BADA55;
+                background-color:gray;
                 position:fixed;
                 width:100%;
                 height:100%;
@@ -52,13 +51,13 @@
         </style>
     </head>
     <body>
-        <div class="fakeLoad">
-            HASJAS
+        <div class="fakeload">
+            loading...
         </div>
         <header>
             <b>The Limes</b>
         </header>
-        
+
         <main>
             <div>
                 <p class="title">Feasibility of a Citizen-driven Hackathon to Increase Public Engagement</p>
