--- a/commandLinePage.html
+++ b/commandLinePage.html
@@ -36,6 +36,7 @@
     /* Input field style */
     #cmdInput {
       flex: 1;
+      text-align: center;
       background: none;
       border: none;
       outline: none;
@@ -83,7 +84,7 @@
         }
       },
       "The_Limes": {
-        "piece4": "E",
+        "piece4.txt": "E",
         "config": {
           "settings.conf": "Config: The settings are purposely confusing."
         }
