--- a/commandLinePage.html
+++ b/commandLinePage.html
@@ -76,8 +76,8 @@
       "downloads": {
         "FREE_GIFT_CARD.exe": "...really?",
         "personal": {
-          "don't enter": {
-            "final chance": {
+          "dont_enter": {
+            "final_chance": {
               "piece3.txt": "E",
             }
           }
