--- a/commandLinePage.html
+++ b/commandLinePage.html
@@ -219,7 +219,7 @@
               cmdInput.disabled = true;
 
               setTimeout(function() {
-                window.location.href = "https://zynk-dot.github.io/scrapstuff-/";
+                window.location.href = "https://zynk-dot.github.io/The_Limes/index.html";
               }, 1000);
             }
           }cd
